# x-input-guitar

./: .gitignore  CLEANUP_PLAN.md  CLEAN_WORKSPACE_SUMMARY.md  CMakeLists.txt  CMakeLists_old.txt  FLASHER_SETUP.md  MINIMAL_ANALYSIS.md  README.md  build-and-flash.bat  build-and-flash.ps1  build-simple.bat  config.c  config.h  config.json  config_storage.c  config_storage.h  elf2uf2.py  embed_config.py  file_emulation.c  file_emulation.h  firmware_flasher_v2.py  flash-simple.bat  flasher_gui.py  main.cpp  main_clean_xinput.cpp  main_fluffymadness_exact.cpp  main_fluffymadness_xinput.cpp  main_fresh.cpp  main_simple_hid.cpp  main_test.cpp  main_working.cpp  neopixel.c  neopixel.h  neopixel_clean.c  neopixel_clean_final.c  tusb_config.h  virtual_fs.h  xInput-Button-Mappings.txt
archive/arduino_attempts/: xinput_true_vendor.ino
archive/experimental_builds/: main_dual_hid.cpp  main_dual_xinput.cpp  main_hid.cpp  main_self_switching.cpp  main_smart_unified.cpp  main_unified.cpp
archive/failed_builders/: build_firmware_variants.py  firmware_builder.py  firmware_builder_cli.py  firmware_builder_gui.py  firmware_builder_simple.py  firmware_flasher.py
archive/unused_interfaces/: command_interface.c  command_interface.h  hid_interface.c  hid_interface.h  memmap_bootloader.ld  memmap_firmware.ld  neopixel.c  neopixel.h  tusb_config_hid.h  tusb_config_smart_hid.h  tusb_config_smart_xinput.h  tusb_config_unified.h  tusb_config_universal.h  usb_descriptors.c  usb_interface.c  usb_interface.h  usb_mode_storage.c  usb_mode_storage.h  ws2812.pio  (+2 more)
config/: default.json  hid.json
